[package]
name = "rdf-reader-jsonld"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A JSON-LD file reader for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "JSON-LD"
summary = "A JSON-LD file reader for [RDF.rs] knowledge graphs."
features = []

[package.metadata.lvr.examples]
import = "rdf_reader_jsonld::JsonldReader"

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-reader/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-reader/std"]
unstable = []

# Implementations:
oxrdf = ["dep:oxjsonld", "rdf-format/oxrdf", "rdf-model/oxrdf", "rdf-reader/oxrdf"]
sophia = ["dep:sophia_jsonld", "rdf-format/sophia", "rdf-model/sophia", "rdf-reader/sophia"]

[dependencies]
async-stream.workspace = true
futures.workspace = true
rdf-format.workspace = true
rdf-model.workspace = true
rdf-reader.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

# Implementations:
oxjsonld = { workspace = true, optional = true }
sophia_jsonld = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
