[package]
name = "rdf-reader-rdfxml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An RDF/XML file reader for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-format/alloc", "rdf-model/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std"]
unstable = []

# Implementations:
oxrdf = ["dep:oxrdfxml", "rdf-model/oxrdf"]

[dependencies]
async-stream.workspace = true
futures.workspace = true
rdf-format.workspace = true
rdf-model.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

# Implementations:
oxrdfxml = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
