[package]
name = "rdf-reader-trig"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A TriG file reader for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-reader/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-reader/std"]
unstable = []

# Implementations:
oxrdf = ["dep:oxttl", "rdf-model/oxrdf"]
sophia = ["dep:sophia_turtle", "rdf-model/sophia"]

[dependencies]
async-stream.workspace = true
futures.workspace = true
rdf-format.workspace = true
rdf-model.workspace = true
rdf-reader.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

# Implementations:
oxttl = { workspace = true, optional = true }
sophia_turtle = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
