[package]
name = "rdf-reader"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
oxrdf = ["rdf-model/oxrdf", "dep:oxrdfio"]
serde = ["rdf-model/serde"]
std = ["rdf-model/std"]
unstable = ["rdf-model/unstable"]

[dependencies]
oxrdfio = { version = "0.1", default-features = false, optional = true }
rdf-format.workspace = true
rdf-model.workspace = true
stability = "0.2"
