[package]
name = "rdf-reader"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
alloc = ["rdf-format/alloc", "rdf-model/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std"]
unstable = []

# Features:
rdf-star = [] # @deprecated

# Interoperability:
oxrdf = ["rdf-model/oxrdf", "dep:oxrdfio"]
serde = ["rdf-model/serde"]
sophia = ["rdf-model/sophia", "dep:sophia"]

[dependencies]
futures.workspace = true
rdf-format.workspace = true
rdf-model.workspace = true
tokio.workspace = true

# Interoperability:
oxrdfio = { workspace = true, optional = true }
sophia = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
