[package]
name = "rdf-store-mongo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A MongoDB storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tls"]
alloc = ["rdf-model/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
tls = ["mongodb/rustls-tls"]
tracing = ["mongodb/tracing-unstable"]

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
async-trait.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
mongodb = { version = "3.7", default-features = false, features = ["bson-3", "compat-3-0-0", "dns-resolver"] }
rdf-hash = { workspace = true, features = ["serde"] }
rdf-model = { workspace = true, features = ["bson", "serde"] }
rdf-store.workspace = true
serde.workspace = true
thiserror.workspace = true
xsd.workspace = true

[dev-dependencies]
tokio.workspace = true
