[package]
name = "rdf-store-mongo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A MongoDB storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "MongoDB"
summary = "A [MongoDB] storage adapter for **[RDF.rs]** knowledge graphs."
features = [
    "Implements a scalable, high-performance RDF store backed by [MongoDB].",
    "Supports [ACID transactions] on MongoDB deployments that enable them.",
]

[package.metadata.lvr.examples]
import = "rdf_store_mongo::{MongoStore, MongoTransaction}"

[features]
default = ["all", "std"]
all = ["tls"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
tls = ["mongodb/rustls-tls"]
tracing = ["mongodb/tracing-unstable"]

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
mongodb = { version = "3.7", default-features = false, features = ["bson-3", "compat-3-0-0", "dns-resolver"] }
rdf-hash = { workspace = true, features = ["serde"] }
rdf-model = { workspace = true, features = ["bson", "serde"] }
rdf-store.workspace = true
serde.workspace = true
thiserror.workspace = true
xsd.workspace = true

[dev-dependencies]
#sparql-store.workspace = true
tokio.workspace = true

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
