[package]
name = "rdf-store-neo4j"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Neo4j storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "Neo4j"
summary = "A [Neo4j] storage adapter for **[RDF.rs]** knowledge graphs."
features = ["Implements a scalable, high-performance RDF store backed by [Neo4j]."]

[package.metadata.lvr.examples]
import = "rdf_store_neo4j::{Neo4jStore, Neo4jTransaction}"

[features]
default = ["all", "std"]
all = ["tls"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
tls = []

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
neo4rs = { version = "0.8", default-features = false }
rdf-model.workspace = true
rdf-store.workspace = true
thiserror.workspace = true
xsd.workspace = true

[dev-dependencies]
#sparql-store.workspace = true
tokio.workspace = true
