[package]
name = "rdf-store-oxigraph"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An Oxigraph storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["rocksdb"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "ouroboros/std", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
rocksdb = ["oxigraph/rocksdb"]

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
ouroboros.workspace = true
oxigraph.workspace = true
rdf-model.workspace = true
rdf-store.workspace = true
send_wrapper.workspace = true
thiserror.workspace = true
xsd.workspace = true

[dev-dependencies]
sparql-store.workspace = true
tokio.workspace = true
