[package]
name = "rdf-store-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A PostgreSQL storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "PostgreSQL"
summary = "A [PostgreSQL] storage adapter for **[RDF.rs]** knowledge graphs."
features = ["Implements a scalable, high-performance RDF store backed by [PostgreSQL]."]

[package.metadata.lvr.examples]
import = "rdf_store_postgres::{PostgresStore, PostgresTransaction}"

[features]
default = ["all", "std"]
all = ["tokio"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
tls = ["dep:tokio-postgres-rustls"]
tokio = ["tokio-postgres/runtime"]

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
rdf-model.workspace = true
rdf-store.workspace = true
thiserror.workspace = true
tokio-postgres = { version = "0.7", default-features = false }
tokio-postgres-rustls = { version = "0.14", default-features = false, optional = true }
xsd.workspace = true

[dev-dependencies]
#sparql-store.workspace = true
tokio.workspace = true
