[package]
name = "rdf-store-qlever"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A QLever storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "QLever"
summary = "A [QLever] storage adapter for **[RDF.rs]** knowledge graphs."
features = ["Implements a scalable, high-performance RDF store backed by [QLever]."]

[package.metadata.lvr.examples]
import = "rdf_store_qlever::{QleverStore, QleverTransaction}"

[features]
default = ["all", "std"]
all = ["libqlever"]
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
libqlever = []

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
rdf-model.workspace = true
rdf-store.workspace = true
thiserror.workspace = true
xsd.workspace = true

[dev-dependencies]
#sparql-store.workspace = true
tokio.workspace = true
