[package]
name = "rdf-store-turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Turso storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "Turso"
summary = "A [Turso] storage adapter for **[RDF.rs]** knowledge graphs."
features = ["Implements a scalable, high-performance RDF store backed by [Turso]."]

[package.metadata.lvr.examples]
import = "rdf_store_turso::{TursoStore, TursoTransaction}"

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
rdf-model.workspace = true
rdf-store.workspace = true
thiserror.workspace = true
turso = { version = "0.6", default-features = false }
xsd.workspace = true

[dev-dependencies]
#sparql-store.workspace = true
tokio.workspace = true
