[package]
name = "rdf-store-valkey"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Valkey storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tokio"]
alloc = ["heapless/alloc", "hex/alloc", "itertools/use_alloc", "rdf-model/alloc", "rdf-store/alloc"]
std = ["alloc", "rdf-model/std", "rdf-store/std"]
unstable = []

# Features:
tls = ["dep:rustls", "fred/enable-rustls"]
tokio = []
tracing = ["fred/partial-tracing"]

[dependencies]
aquamarine.workspace = true
async-stream.workspace = true
derive_more = { workspace = true, features = ["debug"] }
fred = { version = "10.1", default-features = false, features = ["i-std", "i-redis-json", "i-sets", "serde-json", "transactions"] }
futures.workspace = true
heapless.workspace = true
hex.workspace = true
itertools.workspace = true
rdf-hash.workspace = true
rdf-model = { workspace = true, features = ["serde"] }
rdf-store.workspace = true
serde_json.workspace = true
thiserror.workspace = true
xsd = { workspace = true, features = ["serde"] }

# Features:
rustls = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
tokio.workspace = true
