[package]
name = "rdf-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An in-memory storage adapter for RDF.rs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-model/alloc", "dep:parking_lot"]
std = ["alloc", "rdf-model/std"]
unstable = []

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot = { workspace = true, optional = true }
rdf-model.workspace = true

[dev-dependencies]
tokio.workspace = true
