[package]
name = "rdf-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An in-memory storage adapter for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-model/alloc"]
std = ["alloc", "rdf-model/std"]
unstable = []

# Integrations:
oxrdf = ["dep:oxrdf", "dep:spareval", "rdf-model/oxrdf"]

[dependencies]
async-stream.workspace = true
futures.workspace = true
rdf-model.workspace = true
tokio = { workspace = true, features = ["sync"] }

# Integrations:
oxrdf = { workspace = true, optional = true }
spareval = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
