[package]
name = "rdf-writer-cottas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A COTTAS file writer for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "COTTAS"
summary = "A COTTAS file writer for [RDF.rs] knowledge graphs."
features = []

[package.metadata.lvr.examples]
import = "rdf_writer_cottas::CottasWriter"

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-writer/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-writer/std"]
unstable = []

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
#async-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
parquet = { workspace = true, features = ["arrow", "zstd"] }
rdf-format.workspace = true
rdf-model.workspace = true
rdf-writer.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
