[package]
name = "rdf-writer-hdt"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An HDT file writer for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-writer/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-writer/std"]
unstable = []

[dependencies]
#async-stream.workspace = true
futures.workspace = true
hdt = { version = "0.7", features = ["sophia"] }
rdf-format.workspace = true
rdf-model = { workspace = true, features = ["sophia"] }
rdf-writer.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
