[package]
name = "rdf-writer-nquads"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An N-Quads file writer for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "N-Quads"
summary = "An N-Quads file writer for [RDF.rs] knowledge graphs."
features = []

[package.metadata.lvr.examples]
import = "rdf_writer_nquads::NquadsWriter"

[features]
default = ["all", "std"]
all = ["oxrdf"]
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-writer/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-writer/std"]
unstable = []

# Implementations:
oxrdf = ["dep:oxttl", "rdf-format/oxrdf", "rdf-model/oxrdf", "rdf-writer/oxrdf"]
sophia = ["dep:sophia_turtle", "rdf-format/sophia", "rdf-model/sophia", "rdf-writer/sophia"]

[dependencies]
#async-stream.workspace = true
futures.workspace = true
rdf-format.workspace = true
rdf-model.workspace = true
rdf-writer.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

# Implementations:
oxttl = { workspace = true, optional = true }
sophia_turtle = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
